# papyrust

./: .gitignore  Cargo.toml  TESTING.md  VIDEO_FPS_FIX.md  build.rs  papyrust.xml  repomix-output.xml
shaders/: generic.glsl  particle.frag  plasma.frag  rainbow.frag  test.vert
src/: main.rs
src/daemon/: cache.rs  config.rs  ipc.rs  main.rs  media.rs  paper.rs  renderer.rs  utils.rs  video.rs  wayland.rs
src/ui/: discover.rs  ipc.rs  library.rs  mod.rs  panel.rs  popup.rs  state.rs  view.rs
src/ui/components/: lib_popup.rs  mod.rs  panel.rs
src/ui/loader/: mod.rs  project.rs
src/ui/pages/: library.rs  mod.rs
