[package]
name = "papyrust"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies shared by both binaries
clap = { version = "4.5.23", features = ["derive"] }
shellexpand = "3.1.1"

# GUI-only dependencies
derive = { version = "1.0.0", optional = true }
fast_image_resize = { version = "5.1.4", features = ["image"], optional = true }
futures = { version = "0.3.31", optional = true }
iced = { version = "0.13.1", features = ["advanced", "image", "tokio"], optional = true }
iced_aw = { version = "0.12.2", features = ["wrap"], optional = true }
iced_video_player = { git = "https://github.com/jazzfool/iced_video_player", optional = true }
image = { version = "0.25.6", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
tokio = { version = "1.45.1", features = ["fs"], optional = true }
url = { version = "2.5.4", optional = true }

[features]
default = []
gui = ["derive", "fast_image_resize", "futures", "iced", "iced_aw", "iced_video_player", "image", "serde", "serde_json", "tokio", "url"]

[profile.release]
debug = true

[[bin]]
name = "papyrust-daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "papyrust"
path = "src/main.rs"
required-features = ["gui"]

