[package]
name = "papyrust"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core UI dependencies
iced = { version = "0.13.1", features = ["advanced", "image", "tokio"] }
iced_aw = { version = "0.12.2", features = ["wrap"] }
iced_video_player = { git = "https://github.com/jazzfool/iced_video_player" }

# Image processing
image = "0.25.6"
fast_image_resize = { version = "5.1.4", features = ["image"] }

# Async and utilities
tokio = { version = "1.45.1", features = ["fs"] }
futures = "0.3.31"
url = "2.5.4"
shellexpand = "3.1.1"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Wayland
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }
wayland-egl = "0.32"

# Graphics
khronos-egl = { version = "6.0", features = ["static"] }
gl = "0.14"

# System
libc = "0.2"
anyhow = "1.0"

# Media
ffmpeg-next = "7.1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"

[build-dependencies]
gl_generator = "0.14"

[profile.release]
debug = true

[profile.dev]
debug = true
opt-level = 0
overflow-checks = true

[lints.rust]
unsafe_op_in_unsafe_fn = "allow"

[[bin]]
name = "papyrust-daemon"
path = "src/bin/daemon/main.rs"

[[bin]]
name = "papyrust-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "papyrust"
path = "src/main.rs"
